Add Job Entity and disallow same job processing + Update Unit Tests & OpenAPI Specifications
